...
                      ),
                    );
                  },
                ),
                _keySelection != KeySelection.OBSERVATION
                    ? Padding(
                        key: Key('account-source'),
                        padding: EdgeInsets.only(left: 16, right: 16),
                        child: TextFormField(
                          decoration: InputDecoration(
                            hintText: selected,
                            labelText: selected,
                          ),
...
                    : Container(),
              ],
            ),
          ),
        ),
        Container(
          key: Key('account-import-next'),
          padding: EdgeInsets.all(16),
          child: PrimaryButton(
            child: Text(I18n.of(context).translationsForLocale().home.next),
            onPressed: () async {
              if (_formKey.currentState.validate() && !(_advanceOptions.error ?? false)) {
                if (_keySelection == KeySelection.OBSERVATION) {
...
